# cashew

./: .gitignore  APOLOGETICS_ANALYSIS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  PHILOSOPHY.md  README.md  cashew_cli.py  config.example.yaml  config.yaml.template  pyproject.toml
core/: clustering.py  complete_clustering.py  complete_retrieval.py  config.py  context.py  daemon.py  db.py  decay.py  embedding_service.py  embeddings.py  export.py  extractors.py  hierarchy_evolution.py  hotspots.py  llm.py  patterns.py  permanence.py  placement_aware_extraction.py  questions.py  retrieval.py  session.py  sleep.py  stats.py  think_cycle.py  traversal.py
dashboard/: ablation-comparison.html  ablation-random-graph.html  apologetics-dashboard.html  apologetics-summary.html  apologetics.html  experiment-clean-v2.html  experiment-religion-v2.html  graph.html  index.html  v2.html
data/: health-baseline.json
docs/: architecture-diagram.html  architecture.md  build-plan.md  cleanup_report.md  migration.md  migration_report.json  persistence-layer.md  research-notes.md  retrieval-diagram.html
experiments/: add_connections.py  add_missing_edges.py  cleanup_script.py  expand_apologetics.py  repair_religion_db.py
extractors/: markdown_dir.py  sessions.py
integration/: complete_integration.py  complete_integration.py.bak  openclaw.py
metrics-dashboard/: generate.py  index.html
packaging/: com.cashew.daemon.plist
scripts/: ablation_flat_list.py  ablation_iterative.py  ablation_random_graph.py  ablation_relational_prompt.py  ablation_swapped_labels.py  (+28 more)
(+43 files in other folders)
